[package]
name = "patriecia"
description = "VRRB protocol merkle trie library"
version = "0.1.0"
edition = "2021"
authors = ["VRRB Labs <info@vrrb.io>"]
readme = "README.md"

[lib]
name = "patriecia"
path = "pmt/src/lib.rs"

[dependencies]
hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rlp = { workspace = true }
thiserror = { workspace = true }
keccak-hash = { workspace = true }
parking_lot = { workspace = true }
hashbrown = { workspace = true }

[workspace]
members = [
    "jmt",
    "pmt"
]

[workspace.dependencies]
left-right = "0.11.5"
keccak-hash = "0.9"
log = "0.4.16"
rlp = "0.5.1"
rand = "0.8.3"
bytes = { version = "1.4.0", features = ["serde"] }
serde_json = "1.0.96"
bincode = "1.3.3"
serde = { version = "1.0.163", features = ["derive"] }
hex = { version = "0.4.2", features = ["serde"] }
serde_bytes = "0.11.9"
anyhow = "1.0.38"
borsh =  "0.10.0" 
hashbrown = "0.13.2"
itertools = { version = "0.10.0", default-features = false }
mirai-annotations = "1.10.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
parking_lot = { version = "0.12.1" } 
thiserror = { version = "1.0.32" } 
sha2 = "0.10"
tracing = "0.1"
proptest = { version = "1.0.0" }
proptest-derive = { version = "0.3.0" }
criterion = "0.3.5"
ethereum-types = "0.13.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
anyhow.workspace = true
rand.workspace = true
hex.workspace = true
criterion.workspace = true
ethereum-types.workspace = true
uuid.workspace = true
proptest.workspace = true
proptest-derive.workspace = true
