[package]
name = "jmt"
description = "Jellyfish Merkle Tree"
version = "0.1.0"
authors = [
    "VRRB Labs <info@vrrb.io>",
    "Penumbra Labs <team@penumbra.zone>",
    "Diem Association <opensource@diem.com>",
]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "jmt"
path = "jmt"

[features]
default = ["ics23", "std"]
mocks = ["dep:parking_lot"]
std = ["dep:thiserror"]

[dependencies]
anyhow = { workspace = true }
borsh = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
mirai-annotations = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
ics23 = { version = "0.10.0", optional = true }
parking_lot = { version = "0.12.1", optional = true } 
thiserror = { version = "1.0.32", optional = true } 

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
